# ring

./: .gitignore  AGENTS.md  Cargo.toml  README.md  notes.md  rustfmt.toml
benches/: sqe_construction.rs
examples/: readme.rs  readme_no_std.rs  splice_read_test.rs  tokio_rs.rs
foreign_examples/: .clang-format  splice_read_test.c
src/: entry.rs  lib.rs  main.rs  mmap.rs  prep.rs
