[package]
name = "hringas"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "no libc, no_std, pure rust bindings to io_uring"
repository = "https://github.com/LAC-Tech/hringas"
keywords = ["io_uring", "event_loop", "linux"]
categories = ["api-bindings", "asynchronous", "concurrency", "no-std",
"os::linux-apis"]

[dependencies]
rustix = { version = "1.1.2", features = ["io_uring", "mm"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.24.0"
